--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>GIT урок2</h1>
+	<h1>GIT урок2kkkk</h1>
 	<p>Новое изменение index.html</p>
 </body>
 </html>
