--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>GIT урок2kkkk</h1>
-	<p>Новое изменение index.html</p>
+	
+	<p>Новое изменение index.htmlНовое изменение index.htmlНовое изменение index.htmlНовое изменение index.html</p>
 	<P>jfvbdjgbnd</P>
 </body>
 </html>
